--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Government Internship Program System</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="gip2.png" type="image/x-icon">
 <body>
   <h1>Hello World!</h1>
   <p>This is my first website hosted on GitHub.</p>
